{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 133,
  "lineage": "bac38f4a-f452-a0ba-89ed-dba2dbb4fc54",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "repository-organizer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:995353575805:internet-gateway/igw-03c280559497acd10",
            "id": "igw-03c280559497acd10",
            "owner_id": "995353575805",
            "tags": {
              "Name": "repository-organizer"
            },
            "tags_all": {
              "Name": "repository-organizer"
            },
            "vpc_id": "vpc-0d2175b97d161c0ef"
          },
          "dependencies": [
            "module.network.aws_vpc.repository-organizer"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "repository-organizer-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:995353575805:network-acl/acl-004930d718d79e183",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-004930d718d79e183",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "995353575805",
            "subnet_ids": [],
            "tags": {
              "Name": "repository-organizer-public"
            },
            "tags_all": {
              "Name": "repository-organizer-public"
            },
            "vpc_id": "vpc-0d2175b97d161c0ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.repository-organizer"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "repository-organizer-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0acc4fa611f3255ae",
            "network_acl_id": "acl-004930d718d79e183",
            "subnet_id": "subnet-0255751e4af8c1d3b"
          },
          "dependencies": [
            "module.network.aws_network_acl.repository-organizer-public",
            "module.network.aws_subnet.repository-organizer-client-public",
            "module.network.aws_vpc.repository-organizer"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "repository-organizer-client-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:995353575805:route-table/rtb-060f4dfb9d5774b90",
            "id": "rtb-060f4dfb9d5774b90",
            "owner_id": "995353575805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c280559497acd10",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "repository-organizer-client-public"
            },
            "tags_all": {
              "Name": "repository-organizer-client-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2175b97d161c0ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.repository-organizer",
            "module.network.aws_vpc.repository-organizer"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "repository-organizer-client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0480395fb552d9706",
            "route_table_id": "rtb-060f4dfb9d5774b90",
            "subnet_id": "subnet-0255751e4af8c1d3b"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.repository-organizer",
            "module.network.aws_route_table.repository-organizer-client-public",
            "module.network.aws_subnet.repository-organizer-client-public",
            "module.network.aws_vpc.repository-organizer"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "repository-organizer-client-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:995353575805:security-group/sg-09a37520cf6aa14cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "client public",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a37520cf6aa14cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "repository-organizer-client-public",
            "name_prefix": "",
            "owner_id": "995353575805",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "repository-organizer-client-public"
            },
            "tags_all": {
              "Name": "repository-organizer-client-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2175b97d161c0ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.repository-organizer"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "repository-organizer-client-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:995353575805:subnet/subnet-0255751e4af8c1d3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0255751e4af8c1d3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "995353575805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "repository-organizer-client-public"
            },
            "tags_all": {
              "Name": "repository-organizer-client-public"
            },
            "vpc_id": "vpc-0d2175b97d161c0ef"
          },
          "dependencies": [
            "module.network.aws_vpc.repository-organizer"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "repository-organizer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:995353575805:vpc/vpc-0d2175b97d161c0ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fecd9e161772df73",
            "default_route_table_id": "rtb-0aecff46254b72a6d",
            "default_security_group_id": "sg-087bde572f301927c",
            "dhcp_options_id": "dopt-0b9d8601fec4a2d68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d2175b97d161c0ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aecff46254b72a6d",
            "owner_id": "995353575805",
            "tags": {
              "Name": "repository-organizer"
            },
            "tags_all": {
              "Name": "repository-organizer"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}